Fix header spacing and background colour

--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,11 @@
 // Base-theme overrides.
 @import 'overrides';
 
+/*** HEADER ***/
+.navbar.container {
+  margin-top: 8px;
+}
+
 /*** BRANDING AREA ***/
 .navbar-header {
 
