--- a/less/variable-overrides.less
+++ b/less/variable-overrides.less
@@ -7,3 +7,13 @@
 
 // Set the proper directory for the Bootstrap Glyphicon font.
 @icon-font-path: '../bootstrap/fonts/';
+
+
+//== Navbar
+//
+//##
+
+// Basics of a navbar
+@navbar-margin-bottom:             0;
+
+@navbar-default-bg:                transparent;
